<resources>
    <string-array name="tipoMenuArray">
        <item>Comida#2</item>
        <item>Cena#3</item>
    </string-array>
    <string-array name="estadoPedidoArray">
        <item>Pendiente#P</item>
        <item>Aceptado#A</item>
        <item>Rechazado#R</item>
        <item>Terminado#T</item>
    </string-array>
    <string-array name="estadoComandaArray">
        <item>Activas#A</item>
        <item>Cerradas#C</item>
        <item>Nueva comanda#N</item>
        <item>Añadir a comanda#D</item>
    </string-array>
    <string-array name="articulosArray">
        <item>Ingredientes#0</item>
        <item>Tipos articulo#1</item>
        <item>Articulos#2</item>
    </string-array>
    <string-array name="horariosArray">
        <item>Horarios local#0</item>
        <item>Horarios pedido#1</item>
        <item>Dias cierre#2</item>
    </string-array>
    <string-array name="reservasArray">
        <item>Reservas pendientes#0</item>
        <item>Reservas aceptadas#1</item>
        <item>Reservas rechazadas#2</item>
        <item>Mesas#3</item>
        <item>Calendario reservas#4</item>
    </string-array>
    <string-array name="menusArray">
        <item>Platos#0</item>
        <item>Menus#1</item>
        <item>Calendario menus#2</item>
    </string-array>
    <string name="app_name">BrymmApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home_usuario">HomeUsuarioActivity</string>
    <string name="title_activity_home_local">HomeLocalActivity</string>
    <string name="login_usuario_tab_usuario">Usuario</string>
    <string name="login_usuario_nick">Nick</string>
    <string name="login_usuario_password">Password</string>
    <string name="login_usuario_aceptar">Aceptar</string>
    <string name="login_usuario_guardar_sesion">Guardar sesion</string>
    <string name="login_usuario_error_login">Login KO .Usuario o password incorrecto</string>
    <string name="login_local_tab_local">Local</string>
    <string name="login_local_nombre_local">Nombre local</string>
    <string name="login_local_camarero">Camarero</string>
    <string name="login_local_password">Password</string>
    <string name="login_local_guardar_sesion">Guardar sesion</string>
    <string name="login_local_login_camarero">Login camarero</string>
    <string name="login_local_aceptar">Aceptar</string>
    <string name="login_local_error_login">Login KO .Nombre local o password incorrecto</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_buscador_locales">BuscadorLocalesActivity</string>
    <string name="buscador_local_nombre_local">Nombre local</string>
    <string name="buscador_local_calle">Calle</string>
    <string name="buscador_local_poblacion">Poblacion</string>
    <string name="buscador_local_codigo_postal">Codigo postal</string>
    <string name="buscador_local_buscar">Buscar</string>
    <string name="buscador_local_tipo_comida">Tipo comida :</string>
    <string name="buscador_local_todas">Todas</string>
    <string name="buscador_local_no_locales">No se han encontrado locales con los datos indicados!</string>
    <string name="title_activity_mostrar_locales">MostrarLocalesActivity</string>
    <string name="mostrar_local_telefono">Tel : </string>
    <string name="mostrar_local_direccion">Dir : </string>
    <string name="mostrar_local_tipo_comida">Tipo comida: </string>
    <string name="mostrar_local_anadir_favorito">Añadir a favoritos</string>
    <string name="title_activity_mostrar_local">MostrarLocalActivity</string>
    <string name="title_activity_hacer_pedido_fragment">HacerPedidoFragment</string>
    <string name="hacer_pedido_anadir_articulo">Añadir articulo</string>
    <string name="hacer_pedido_anadir_articulo_personalizado">Añadir articulo personalizado</string>
    <string name="hacer_pedido_terminar_pedido">Terminar pedido</string>
    <string name="hacer_pedido_observaciones">Observaciones</string>
    <string name="hacer_pedido_enviar_a">Enviar a</string>
    <string name="hacer_pedido_fecha">Fecha</string>
    <string name="hacer_pedido_hora">Hora</string>
    <string name="hacer_pedido_retrasar_pedido">Retrasar pedido</string>
    <string name="title_activity_reservar_fragment">ReservarFragment</string>
    <string name="reservar_fecha">Fecha/hora</string>
    <string name="reservar_numero_personas">Numero personas</string>
    <string name="reservar_observaciones">Observaciones</string>
    <string name="reservar_realizar_reserva">Realizar reserva</string>
    <string name="reservar_aceptar">Aceptar</string>
    <string name="reservar_cancelar">Cancelar</string>
    <string name="obtener_menu_fecha">Fecha</string>
    <string name="obtener_menu_ver_menu">Ver menu</string>
    <string name="title_activity_anadir_articulo">AnadirArticulo</string>
    <string name="anadir_articulo_anadir">Añadir</string>
    <string name="anadir_articulo_cantidad">Cantidad</string>
    <string name="anadir_articulo_ingredientes">Ing:</string>
    <string name="anadir_articulo_aceptar">Aceptar</string>
    <string name="anadir_articulo_cancelar">Cancelar</string>
    <string name="title_activity_anadir_articulo_personalizado">AnadirArticuloPersonalizado</string>
    <string name="anadir_articulo_personalizado_aceptar">Aceptar</string>
    <string name="anadir_articulo_personalizado_cancelar">Cancelar</string>
    <string name="anadir_articulo_personalizado_cantidad">Cantidad</string>
    <string name="anadir_articulo_personalizado_articulo_personalizado">Articulo personalizado</string>
    <string name="item_pedido_id_pedido">Pedido :</string>
    <string name="item_pedido_local">Local :</string>
    <string name="item_pedido_fecha_entrega">Fecha entrega :</string>
    <string name="item_pedido_fecha_pedido">Fecha pedido :</string>
    <string name="item_pedido_precio">Precio :</string>
    <string name="item_pedido_direccion">Dir :</string>
    <string name="item_pedido_estado">Estado :</string>
    <string name="title_activity_ultimos_pedidos">UltimosPedidosActivity</string>
    <string name="title_activity_pedido">PedidoActivity</string>
    <string name="pedido_id_pedido">Pedido :</string>
    <string name="pedido_local">Local :</string>
    <string name="pedido_fecha_entrega">Fecha entrega :</string>
    <string name="pedido_fecha_pedido">Fecha pedido :</string>
    <string name="pedido_precio">Precio :</string>
    <string name="pedido_direccion">Dir :</string>
    <string name="pedido_estado">Estado :</string>
    <string name="pedido_motivo_rechazo">Motivo :</string>
    <string name="pedido_observaciones">Observaciones :</string>
    <string name="progress_dialog_realizando_operacion">Realizando operacion</string>
    <string name="progress_dialog_pedido">Realizando pedido</string>
    <string name="toast_datos_incorrectos">Datos incorrectos</string>
    <string name="toast_error_operacion">Error realizando operacion</string>
    <string name="menu_usuario_ultimos_pedidos">Ultimos pedidos</string>
    <string name="menu_usuario_direcciones">Direcciones</string>
    <string name="menu_usuario_buscador">Buscador locales</string>
    <string name="menu_usuario_locales_favoritos">Locales favoritos</string>
    <string name="menu_usuario_ultimas_reservas">Ultimas reservas</string>
    <string name="menu_local_articulos">Articulos</string>
    <string name="menu_local_pedidos">Pedidos</string>
    <string name="menu_local_servicios">Servicios</string>
    <string name="menu_local_horarios">Horarios</string>
    <string name="menu_local_reservas">Reservas</string>
    <string name="menu_local_menus">Menus</string>
    <string name="menu_local_comandas">Comandas</string>
    <string name="menu_local_cerrar_sesion">Cerrar sesion</string>
    <string name="context_menu_ingrediente_borrar">Borrar</string>
    <string name="context_menu_ingrediente_modificar">Modificar</string>
    <string name="context_menu_tipo_articulo_borrar">Borrar</string>
    <string name="context_menu_tipo_articulo_modificar">Modificar</string>
    <string name="context_menu_articulo_borrar">Borrar</string>
    <string name="context_menu_articulo_modificar">Modificar</string>
    <string name="context_menu_pedido_borrar_articulo">Borrar articulo</string>
    <string name="context_menu_direccion_borrar">Borrar</string>
    <string name="context_menu_direccion_modificar">Modificar</string>
    <string name="context_menu_favoritos_eliminar">Eliminar</string>
    <string name="context_menu_reserva_anular">Anular reserva</string>
    <string name="context_menu_servicio_modificar">Modificar</string>
    <string name="context_menu_servicio_borrar">Borrar</string>
    <string name="context_menu_servicio_activar">Activar</string>
    <string name="context_menu_servicio_desactivar">Desactivar</string>
    <string name="context_menu_horario_local_borrar">Borrar</string>
    <string name="context_menu_horario_pedido_borrar">Borrar</string>
    <string name="context_menu_dia_cierre_borrar">Borrar</string>
    <string name="context_menu_mesa_borrar">Borrar</string>
    <string name="context_menu_mesa_modificar">Modificar</string>
    <string name="context_menu_plato_borrar">Borrar</string>
    <string name="context_menu_plato_modificar">Modificar</string>
    <string name="context_menu_menu_borrar">Borrar</string>
    <string name="context_menu_menu_modificar">Modificar</string>
    <string name="context_menu_menu_dia_asignar_plato">Añadir plato</string>
    <string name="context_menu_menu_dia_desasignar_plato">Borrar plato del menu</string>
    <string name="context_menu_menu_dia_borrar">Borrar</string>
    <string name="title_activity_direcciones">DireccionesActivity</string>
    <string name="anadir_direccion_nombre">Nombre direccion (ej : casa)</string>
    <string name="anadir_direccion_direccion">Direccion</string>
    <string name="anadir_direccion_poblacion">Poblacion</string>
    <string name="anadir_direccion_provincia">Provincia</string>
    <string name="anadir_direccion_guardar">Guardar</string>
    <string name="anadir_direccion_cancelar">Cancelar</string>
    <string name="anadir_modificar_ingrediente_nombre">Nombre</string>
    <string name="anadir_modificar_ingrediente_precio">Precio</string>
    <string name="anadir_modificar_ingrediente_descripcion">Descripcion</string>
    <string name="anadir_modificar_ingrediente_aceptar">Aceptar</string>
    <string name="anadir_modificar_ingrediente_cancelar">Cancelar</string>
    <string name="detalle_pedido_id_pedido">Pedido :</string>
    <string name="detalle_pedido_fecha_entrega">Fecha entrega :</string>
    <string name="detalle_pedido_fecha_pedido">Fecha pedido :</string>
    <string name="detalle_pedido_precio">Precio :</string>
    <string name="detalle_pedido_direccion">Dir :</string>
    <string name="detalle_pedido_estado">Estado :</string>
    <string name="detalle_pedido_usuario">Usuario :</string>
    <string name="detalle_pedido_cancelar">Cancelar</string>
    <string name="detalle_pedido_rechazar">Rechazar</string>
    <string name="item_pedido_local_id_pedido">Pedido :</string>
    <string name="item_pedido_local_usuario">Usuario :</string>
    <string name="item_pedido_local_fecha_entrega">Fecha entrega :</string>
    <string name="item_pedido_local_fecha_pedido">Fecha pedido :</string>
    <string name="item_pedido_local_precio">Precio :</string>
    <string name="item_pedido_local_direccion">Dir :</string>
    <string name="item_pedido_local_estado">Estado :</string>
    <string name="item_comanda_comanda">Comanda :</string>
    <string name="item_comanda_camarero">Camarero :</string>
    <string name="item_comanda_precio">Precio :</string>
    <string name="item_comanda_estado">Estado :</string>
    <string name="item_comanda_observaciones">Observaciones :</string>
    <string name="item_comanda_mesa">Mesa :</string>
</resources>