<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/itemComandaLlComanda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/itemComandaTvIdComanda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_comanda_comanda" />

        <TextView
            android:id="@+id/itemComandaTvCamarero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_comanda_camarero" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemComandaLlPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/itemComandaTvPrecio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_comanda_precio" />

        <TextView
            android:id="@+id/itemComandaTvEstado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_comanda_estado" />
    </LinearLayout>

    <TextView
        android:id="@+id/itemComandaTvMesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_comanda_mesa" />

    <TextView
        android:id="@+id/itemComandaTvObservaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_comanda_observaciones" />

</LinearLayout>