<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/itemPedidoLocalLlPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/itemPedidoLocalTvIdPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_pedido_local_id_pedido" />

        <TextView
            android:id="@+id/itemPedidoLocalTvUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_pedido_local_usuario" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemPedidoLocalLlPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/itemPedidoLocalTvPrecio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_pedido_local_precio" />

        <TextView
            android:id="@+id/itemPedidoLocalTvEstado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_pedido_local_estado" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/itemPedidoLocalLlFechas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/itemPedidoLocalTvFechaPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_pedido_local_fecha_pedido" />

        <TextView
            android:id="@+id/itemPedidoLocalTvFechaEntrega"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/item_pedido_local_fecha_entrega" />
    </LinearLayout>

    <TextView
        android:id="@+id/itemPedidoLocalTvDireccionEnvio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_pedido_local_direccion" />

</LinearLayout>