<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detallePedidoLlPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HacerPedidoFragment" >

    <LinearLayout
        android:id="@+id/detallePedidoLlBotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/detallePedidoBtAccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/detallePedidoBtRechazar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_pedido_rechazar" />

        <Button
            android:id="@+id/detallePedidoBtCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_pedido_cancelar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detallePedidoLlPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/detallePedidoTvIdPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_pedido_id_pedido" />

        <TextView
            android:id="@+id/detallePedidoTvUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_pedido_usuario" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detallePedidoLlPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/detallePedidoTvPrecio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_pedido_precio" />

        <TextView
            android:id="@+id/detallePedidoTvEstado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_pedido_estado" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/detallePedidoLlFechas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/detallePedidoTvFechaPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_pedido_fecha_pedido" />

        <TextView
            android:id="@+id/detallePedidoTvFechaEntrega"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detalle_pedido_fecha_entrega" />
    </LinearLayout>

    <TextView
        android:id="@+id/detallePedidoTvDireccionEnvio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalle_pedido_direccion" />

    <ListView
        android:id="@+id/detallePedidoLvArticulos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>