<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AnadirDireccionActivity" >

    <EditText
        android:id="@+id/anadirDireccionEtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/anadir_direccion_nombre" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/anadirDireccionEtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/anadir_direccion_direccion"/>

    <EditText
        android:id="@+id/anadirDireccionEtPoblacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/anadir_direccion_poblacion"/>

    <EditText
        android:id="@+id/anadirDireccionEtProvincia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/anadir_direccion_provincia"/>

    <LinearLayout
        android:id="@+id/anadirDireccionLlBotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/anadirDireccionBtGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anadir_direccion_guardar" />

        <Button
            android:id="@+id/anadirDireccionBtCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anadir_direccion_cancelar" />
    </LinearLayout>

</LinearLayout>
