<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AnadirModificarIngredienteActivity" >

    <EditText
        android:id="@+id/anadirModificarIngredienteEtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/anadir_modificar_ingrediente_nombre" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/anadirModificarIngredienteEtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/anadir_modificar_ingrediente_descripcion" />

    <EditText
        android:id="@+id/anadirModificarIngredienteEtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/anadir_modificar_ingrediente_precio"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:id="@+id/anadirModificarIngredienteLlBotones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/anadirModificarIngredienteBtAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anadir_modificar_ingrediente_aceptar" />

        <Button
            android:id="@+id/anadirModificarIngredienteBtCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anadir_modificar_ingrediente_cancelar" />
    </LinearLayout>

</LinearLayout>