<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReservarFragment" >

    <EditText
        android:id="@+id/reservarEtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/reservar_fecha" >

    </EditText>

    <EditText
        android:id="@+id/reservarEtNumeroPersonas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/reservar_numero_personas" />

    <Spinner
        android:id="@+id/reservarSpTipoMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/reservarEtObservaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/reservar_observaciones" />

    <Button
        android:id="@+id/reservarBtAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reservar_realizar_reserva" />

    

</LinearLayout>
